--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,18 +1,14 @@
 apply plugin: 'com.android.application'
 
-dependencies {
-    compile project(':library')
-}
-
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         versionCode 6
         versionName '1.5'
-        minSdkVersion 14
-        targetSdkVersion 22
+        minSdkVersion 17
+        targetSdkVersion 28
     }
 
     signingConfigs {
@@ -33,11 +29,19 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
 
     lintOptions {
         abortOnError true
     }
+
+    dependencies {
+        implementation project(':library')
+    }
+}
+
+dependencies {
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
